--- a/migrations/ozon/alembic.ini
+++ b/migrations/ozon/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = alembic
+script_location = migrations/ozon
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
@@ -34,9 +34,6 @@ script_location = alembic
 # the output encoding used when revision files
 # are written from script.py.mako
 # output_encoding = utf-8
-
-sqlalchemy.url = mysql+mysqldb://root:root@db:3306/wildsearch?charset=utf8
-
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
